--- a/support/latex/common.tex
+++ b/support/latex/common.tex
@@ -1,6 +1,6 @@
 \pagelayout{\paperbackpage}
 
-\usepackage{root/support/latex/sbabook/pharo-titlepage}
+\usepackage[maketitle,foggy]{root/support/latex/sbabook/pharo-titlepage}
 
 \usepackage{polyglossia}
 \usepackage[useregional]{datetime2}
